Atualizei o style.css 💻

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 @font-face {
    font-family: "Questrial";
-   src: url("../fontes/Questrial-Regular.ttf");
+   src: url("Questrial-Regular.ttf");
 }
