--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @font-face {
-   font-family: "Questrial";
+   font-family: 'Questrial';
    src: url("Questrial-Regular.ttf");
 }
 
 * {
-   font-family: "Questrial";
+   font-family: 'Questrial';
 }
