--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+@charset "UTF-8";
 @font-face {
    font-family: 'Questrial';
    src: url("Questrial-Regular.ttf");
 }
 
-* {
+h1 {
    font-family: 'Questrial';
 }
